--- a/src/blocks/airdatepicker/airdatepicker.scss
+++ b/src/blocks/airdatepicker/airdatepicker.scss
@@ -8,7 +8,9 @@
     height: 40px;
 }
 
-
+#ui-datepicker-div{
+    display: none!important;
+}
 
 
 .datepicker--cell-day.-other-month-, .datepicker--cell-year.-other-decade- {
