--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,6 +18,7 @@
 @import "../blocks/airdatepicker/airdatepicker.scss";
 @import "../blocks/dropdown/dropdown.scss";
 @import "../blocks/panagination/panagination.scss";
+@import "../blocks/donutChart/donutChart.scss";
 
 html,
 body {
