--- a/src/blocks/dropdown/dropdown.scss
+++ b/src/blocks/dropdown/dropdown.scss
@@ -97,7 +97,7 @@
   }
 
   .clean{
-    font-family: "OpenSans";
+    font-family: "Montserrat";
     font-style: normal;
     font-weight: bold;
     font-size: 18px;
