--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -47,40 +47,41 @@ footer
           | предложения и новости сервиса
         +input-subscription("Email")
   hr
-  .footer__details.container
+  .container
+     .footer__details.row
         p(class="footer__details__copyright") Сорyright &copy; 2018 Тохin отель. Все права зачищены. 
-        ul.about-list.row
-          li
-            a(href="#")
-              svg(width="0" height="0")
-                radialGradient(id="rg" r="150%" cx="30%" cy="107%")
-                  stop(stop-color="#BC9CFF" offset="0")
-                  stop(stop-color="#BC9CFF" offset="0.05")
-                  stop(stop-color="#8BA4F9" offset="0.45")
-                  stop(stop-color="#8BA4F9" offset="0.6")
-                  stop(stop-color="#8BA4F9" offset="0.9")
-              div.div
-                i(class="fab fa-twitter" aria-hidden="true")
-          li
-            a(href="#")
-              svg(width="0" height="0")
-                radialGradient(id="rg" r="150%" cx="30%" cy="107%")
-                  stop(stop-color="#BC9CFF" offset="0")
-                  stop(stop-color="#BC9CFF" offset="0.05")
-                  stop(stop-color="#8BA4F9" offset="0.45")
-                  stop(stop-color="#8BA4F9" offset="0.6")
-                  stop(stop-color="#8BA4F9" offset="0.9")
-              div.div
-                i(class="fab fa-facebook-f" aria-hidden="true")
-          li
-            a(href="#")
-              svg(width="0" height="0")
-                radialGradient(id="rg" r="150%" cx="30%" cy="107%")
-                  stop(stop-color="#8BA4F9" offset="0")
-                  stop(stop-color="#BC9CFF" offset="0.05")
-                  stop(stop-color="#BC9CFF" offset="0.45")
-                  stop(stop-color="#BC9CFF" offset="0.6")
-                  stop(stop-color="#BC9CFF" offset="0.9")
-              div.div
-                i(class="fab fa-instagram" aria-hidden="true")
-          
+        ul.row
+            li
+              a(href="#")
+                svg(width="0" height="0")
+                  radialGradient(id="rg" r="150%" cx="30%" cy="107%")
+                    stop(stop-color="#BC9CFF" offset="0")
+                    stop(stop-color="#BC9CFF" offset="0.05")
+                    stop(stop-color="#8BA4F9" offset="0.45")
+                    stop(stop-color="#8BA4F9" offset="0.6")
+                    stop(stop-color="#8BA4F9" offset="0.9")
+                div.div
+                  i(class="fab fa-twitter" aria-hidden="true")
+            li
+              a(href="#")
+                svg(width="0" height="0")
+                  radialGradient(id="rg" r="150%" cx="30%" cy="107%")
+                    stop(stop-color="#BC9CFF" offset="0")
+                    stop(stop-color="#BC9CFF" offset="0.05")
+                    stop(stop-color="#8BA4F9" offset="0.45")
+                    stop(stop-color="#8BA4F9" offset="0.6")
+                    stop(stop-color="#8BA4F9" offset="0.9")
+                div.div
+                  i(class="fab fa-facebook-square" aria-hidden="true")
+            li
+              a(href="#")
+                svg(width="0" height="0")
+                  radialGradient(id="rg" r="150%" cx="30%" cy="107%")
+                    stop(stop-color="##8BA4F9" offset="0")
+                    stop(stop-color="#8BA4F9" offset="0.05")
+                    stop(stop-color="#8BA4F9" offset="0.45")
+                    stop(stop-color="#8BA4F9" offset="0.6")
+                    stop(stop-color="#BC9CFF" offset="0.9")
+                div.div
+                  i(class="fab fa-instagram" aria-hidden="true")
+            
