--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -8,9 +8,11 @@
   }
   &__logo {
     background-image: url(../images/Logo.svg);
-    width: 105.69px;
-    height: 40px;
-    margin-top: 15px;
+    background-image: url(../images/Logo.svg);
+    background-repeat: no-repeat;
+    width: 115px; height: 55px;
+    margin-top: 10px;
+    margin-left: 27px;
     background-repeat: no-repeat;
     display: block;
     padding: 10px 0 0 30px;
@@ -35,7 +37,7 @@
       & a {
         display: block;
         text-decoration: none;
-        font-family: "OpenSans-Bold";
+        font-family: "Montserrat";
         font-style: normal;
         font-weight: normal;
         font-size: 18px;
@@ -125,9 +127,11 @@
   color: $violet-text;
   text-decoration: none;
   font-family: "OpenSans-Bold";
-  margin: 22px;
+  margin: 16px 16px  16px 23px;
 }
 
 .btn-signup{
   margin-bottom: 30px;
+  margin-right: 10px;
+  margin-left: 7px;
 }
