--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -1,3 +1,14 @@
+
+
+  @font-face {
+    font-family: "Montserrat";
+    src: url("fonts/Montserrat-Regular.eot?") format("eot"),
+      url("fonts/Montserrat-Regular.woff") format("woff"),
+      url("fonts/Montserrat-Regular.ttf") format("truetype"),
+      url("fonts/Montserrat-Regular.svg#Samplino") format("svg");
+  }
+
+
 @font-face {
   font-family: "OpenSans";
   src: url("fonts/subset-OpenSans.woff") format("woff"),
