update airdatepicker and search page

--- a/src/blocks/airdatepicker/airdatepicker.pug
+++ b/src/blocks/airdatepicker/airdatepicker.pug
@@ -4,11 +4,13 @@ div.flex-wrap
         data-multiple-dates-separator=" - " 
         class="dateRange range"
         class="datepicker-here"
-        id="startDate")
+        id="startDate"
+        placeholder="ДД.ММ.ГГ")
 
     input(type="text"
         class="range"
-        id="endDate")
+        id="endDate"
+         placeholder="ДД.ММ.ГГ")
 
 //- input(type='text' class="datepickerWrap" id='start' data-range="true"
 //-     data-multiple-dates-separator=" - "
