--- a/src/components/form-search/form-search.pug
+++ b/src/components/form-search/form-search.pug
@@ -6,12 +6,12 @@ include ../mixins.pug
     div.container-form
       h1(class="title__main" style='white-space:pre;') 
         |Найдём номера под 
-        |ваши пожелания
-      .row
-        label(class="form-search__label") Гости
-        label(class="form-search__label") Гости
+        |  ваши пожелания
+      .row.form__search__title
+        label(class="form-search__label form-search__label-arrival") Прибытие
+        label(class="form-search__label") Выезд
       include ../../blocks/airdatepicker/airdatepicker.pug
-      label(class="form-search__label") Гости
+      label(class="form-search__label form-search__label-guests") Гости
       include ../../blocks/dropdown/dropdown.pug
       //- .row.flexs
       //-   .block
@@ -22,4 +22,4 @@ include ../mixins.pug
       //-     input( type="text" name="end-date" id="end-date" placeholder="ДД.ММ.ГГГГ" class="input-date")
         
 
-      button(type="button" class="btn btn-width-violet") подобрать номер
+      button(type="button" class="btn btn-width-violet form__search__btn") подобрать номер
