--- a/src/components/form-search/form-search.scss
+++ b/src/components/form-search/form-search.scss
@@ -70,18 +70,33 @@ border-radius: 4px;
 }
 
 .container-form{
-  padding-top: 40px;
+  padding: 30px 10px 0 5px;
 };
 
 .form-search__label{
+  font-family: "Montserrat";
   font-style: normal;
   font-weight: bold;
-  font-size: 12px;
+  font-size: 16px;
   line-height: 15px;
   text-transform: uppercase;
   text-decoration: none;
+  padding-bottom: 10px;
+  margin-left: 7px;
+  margin-top: 10px;
 }
 
+.form-search__label-arrival{
+    padding-right: 123px;
+}
+
+.form-search__label-guests{
+  padding-top: 20px;
+}
+
+.form__search__btn{
+  margin-left: 10px;
+}
 .wrapper-search{
   margin-left: auto;
   margin-right: auto;
