--- a/src/blocks/donutChart/donutChart.scss
+++ b/src/blocks/donutChart/donutChart.scss
@@ -1,6 +1,8 @@
 svg{
-    width: 300px;
+    width: 205px;
     height: 250px;
+    margin-top: 7px;
+    margin-left: 7px;
 }
 .circle {
     cx: 85px;
@@ -45,14 +47,18 @@ svg{
     transform: rotate(-90deg) translateX(-171px);
   }
   
+  .figure-key{
+      margin-top: 50px;
+  }
   .figure-key-list {
     margin: 0;
     padding: 0;
     list-style: none;
   }
   .figure-key-list li {
-    margin: 0 0 8px;
+    margin: 0 0 9px;
     padding: 0;
+    font-size: 19px;
   }
   .shape-circle {
     display: inline-block;
@@ -95,17 +101,16 @@ svg{
     transform: translateY(0.25em);
   }
   .chart-number {
-    font-size: 2.3em;
+    font-size: 2em;
     line-height: 1;
     text-anchor: middle;
-    font-family: "OpenSans";
     -moz-transform: translateY(-0.25em);
     -ms-transform: translateY(-0.25em);
     -webkit-transform: translateY(-0.25em);
     transform: translateY(-0.25em);
   }
   .chart-label {
-    font-size: 0.9em;
+    font-size: 1em;
     text-transform: uppercase;
     text-anchor: middle;
     -moz-transform: translateY(0.7em);
