--- a/src/components/room-page/room-page.scss
+++ b/src/components/room-page/room-page.scss
@@ -8,7 +8,7 @@
 }
 
 #slider-range {
-  width: 270px;
+  width: 350px;
   height: 6px;
   background-color: white;
 }
@@ -55,6 +55,26 @@
   line-height: 15px;
   text-transform: uppercase;
   color: #1f2041;
+  letter-spacing: .2px;
+  margin-block-end: 0.1em;
+  margin-block-start: 0.1em;
+}
+
+.room__title--price{
+  padding: 45px 0 31px 0;
+}
+
+.room__title--checkboxes{
+  margin-bottom: 24px;
+}
+
+.room__title--availability{
+  margin-top: 32px;
+  margin-bottom: 23px;
+}
+
+.room__title--comfort{
+  margin-top: 27px;
 }
 // .checkbox__button{
 //   background-color: #ffffff;
@@ -78,28 +98,40 @@
 //   vertical-align: text-top;
 // }
 
+
+.checkbox__name__descr{
+  font-size: 18px;
+  letter-spacing: 1.2px;
+}
+
+
 .checkbox__span__descr {
   display: block;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
-  line-height: 14px;
+  line-height: 16px;
   color: rgba(31, 32, 65, 0.5);
-  margin-left: 2.4vw;
+  margin-left: 2vw;
   margin-top: 0.5vw;
   margin-bottom: 1vw;
 }
 
 .slider__range__price {
   float: right;
-  margin-top: -3vh;
+  margin-top: -5.5vh;
+  font-size: 16px;
   color: black;
   border: none;
-  margin-right: -3vw;
+  margin-right: -4vw;
 }
 
+.slider__range__title {
+  padding-top: 20px;
+  padding-bottom: 38px;
+}
 .room__checkbox{
-  margin-bottom: 20px;
+  margin-bottom: 13px;
 }
 
 .right-side{
