--- a/src/components/info-room/info-room.pug
+++ b/src/components/info-room/info-room.pug
@@ -2,8 +2,11 @@ include ../mixins.pug
 
 div(class="information")
     div(class="information_top-part")
-        div(class="backgound__big")
-            img(src=require("./images/mainA.jpg"))
+        div(class="backgound__first")
+            img(src=require("./images/mainA.jpg") class="bigImg")
+        div(class="backgound__second")
+            img(src=require("./images/mainB.jpg") class="mainB")
+            img(src=require("./images/mainC.jpg") class="mainC")
     div(class="information_bottom-part row" class="container")
         div(class="bottom-part__left")
 
@@ -19,13 +22,14 @@ div(class="information")
             .blocks 
                 h3(class="title information__title information__title--details") Отзывы посетителей номера
                 +feedback(require("./images/photo1.jpg"), "Мурад Сарафанов", '5 дней назад', "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.")
-                +feedback(require("./images/photo2.jpg"), "Патрисия Стёклышкова", 'Неделю назад', "Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент")
+                div(class="information__impression-second")
+                    +feedback(require("./images/photo2.jpg"), "Патрисия Стёклышкова", 'Неделю назад', "Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент")
             div(class="row row-flex")
-                .blocks
+                .blocks.information__rules
                     h3(class="title  information__title information__title--rules") Правила
-                    +bullet-list("Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00" +"," + "   "  +"а выезд до 12:00 ")
-                .blocks
-                    h3(class="title  information__title") Отмена
+                    +bullet-list("Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00" + ", "   +  " а выезд до 12:00 ")
+                .blocks.information__cancel
+                    h3(class="title  information__title information__title--cancel") Отмена
                     p(style='white-space:pre;')
                         | Бесплатная отмена в течение 48 ч. После
                         | этого при отмене не позднее чем за 5 дн. до 
