--- a/src/components/mixins.pug
+++ b/src/components/mixins.pug
@@ -54,7 +54,7 @@ mixin checkbox(name, label, nameClass)
 
 mixin description-checkbox(name, label, descr)
   div(class="checkbox__button checkbox__button__descr")
-    input(type="checkbox" class="checkbox__button__descr checkbox__box" id= name name= name value= name)
+    input(type="checkbox" class="checkbox__button__descr checkbox__descr__box checkbox__box" id= name name= name value= name)
     label(for= name class="checkbox__button__descr checkbox__name checkbox__name__descr")= label
     span(class="checkbox__button__descr checkbox__span__descr")= descr
   
