add slider for card-room

--- a/src/blocks/panagination/panagination.pug
+++ b/src/blocks/panagination/panagination.pug
@@ -1,5 +1,6 @@
 div(class="content_detail__pagination cdp" actpage="1")
-    a(href="#!-1" class="cdp_i") prev
+    a(href="#!-1" class="cdp_i cdp_i_back")
+        i(class="material-icons") arrow_back
     a(href="#!1" class="cdp_i") 1
     a(href="#!2" class="cdp_i") 2
     a(href="#!3" class="cdp_i") 3
@@ -19,4 +20,5 @@ div(class="content_detail__pagination cdp" actpage="1")
     a(href="#!17" class="cdp_i") 17
     a(href="#!18" class="cdp_i") 18
     a(href="#!19" class="cdp_i") 19
-    a(href="#!+1" class="cdp_i") next
+    a(href="#!+1" class="cdp_i forward") 
+        i(class="material-icons") arrow_forward
