--- a/css/main.css
+++ b/css/main.css
@@ -922,6 +922,10 @@
   color: rgba(31, 32, 65, 0.5);
 }
 
+.card-border{
+  border: 1px solid rgba(31, 32, 65, 0.1);
+}
+
 .card-span {
   font-weight: normal;
 }
