--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -17,19 +17,19 @@
     &-number{
       font-style: normal;
       font-weight: bold;
-      font-size: 28px;
+      font-size: 24px;
       line-height: 17px;
       color: #1F2041;}
     &-price{
-      font-family: Montserrat;
       font-style: normal;
       font-weight: bold;
-      font-size: 28px;
+      font-size: 20px;
       line-height: 18px;
       color: rgba(31, 32, 65, 0.5);
     }
     &-span{
         font-weight: normal;
+        font-size: 17px;
     }
   }
   
@@ -51,7 +51,7 @@
     --star-size: 24px;
     --star-outline: #4CAF50 solid 1px;
     --star-color: #fff;
-    --star-background: #BC9CFF;
+    --star-background: radiant-gradient( #BC9CFF, #8BA4F9 );
   }
   
   .Stars {
