--- a/src/components/room-page/room-page.pug
+++ b/src/components/room-page/room-page.pug
@@ -29,18 +29,23 @@ include ../mixins.pug
             //-     input(type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;")
             //- div(id="slider-range")
     .right-side
-        h1(class="title__main") Найдём номера под ваши пожелания
+        h1(class="title__main") Номера, которые мы для вас подобрали
         span(class="slide" id="slide")
             a(href="#")
                 i(class="fab fa-instagram")
         .wrapper_content
             .content
-                +card-room(require("./images/room1.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
-                +card-room(require("./images/room2.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
-                +card-room(require("./images/room3.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
-                +card-room(require("./images/room4.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
-                +card-room(require("./images/room5.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
-                +card-room(require("./images/room6.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
-                +card-room(require("./images/room7.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
-                +card-room(require("./images/room8.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
-                +card-room(require("./images/room9.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room("carousel", require("./images/room1.jpg"), require("./images/room1.jpg"), require("./images/room1.jpg"), require("./images/room1.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room("carousel1", require("./images/room2.jpg"), require("./images/room2.jpg"), require("./images/room2.jpg"), require("./images/room2.jpg"),800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room("carousel2", require("./images/room3.jpg"), require("./images/room3.jpg"), require("./images/room3.jpg"), require("./images/room3.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room("carousel3", require("./images/room4.jpg"), require("./images/room4.jpg"), require("./images/room4.jpg"), require("./images/room4.jpg"),  800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room("carousel4", require("./images/room5.jpg"), require("./images/room5.jpg"), require("./images/room5.jpg"), require("./images/room5.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room("carousel5", require("./images/room6.jpg"), require("./images/room6.jpg"), require("./images/room6.jpg"), require("./images/room6.jpg"),800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room("carousel6", require("./images/room7.jpg"), require("./images/room7.jpg"), require("./images/room7.jpg"), require("./images/room7.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room("carousel7", require("./images/room8.jpg"), require("./images/room8.jpg"), require("./images/room8.jpg"), require("./images/room8.jpg"),  800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room("carousel8", require("./images/room9.jpg"), require("./images/room9.jpg"), require("./images/room9.jpg"), require("./images/room9.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room("carousel9", require("./images/room1.jpg"), require("./images/room1.jpg"), require("./images/room1.jpg"), require("./images/room1.jpg"),800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room("carousel10", require("./images/room3.jpg"), require("./images/room3.jpg"), require("./images/room3.jpg"), require("./images/room3.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room("carousel11", require("./images/room4.jpg"), require("./images/room4.jpg"), require("./images/room4.jpg"), require("./images/room4.jpg"),  800, 800, "--rating: 3.5",800, "room-card__decor")
+
+        include ../../blocks/panagination/panagination.pug
