--- a/src/components/form-register/form-register.scss
+++ b/src/components/form-register/form-register.scss
@@ -19,3 +19,34 @@
     justify-content: space-around;
     margin-top: 10px;
   }
+
+  .signup__input--name{
+    padding-top: 5px;
+  }
+
+  
+  .signup__input--surname{
+    padding-top: 15px;
+  }
+
+  .signup__input--birthday{
+    padding-top: 5px;
+  }
+
+  .signup__input--data{
+    padding-top: 25px;
+  }
+
+  .signup__input--data--password{
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+
+  .signup__button--payment{
+    margin-top: 25px;
+    margin-bottom: 25px;
+  }
+
+  .sugnup__text{
+    font-size: 19px;
+  }
