--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -1,5 +1,5 @@
 .card {
-    width: 19vw;
+    width: 350px;
     background: #ffffff;
     box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
     border-radius: 7px;
