--- a/src/components/components-page/components-page.pug
+++ b/src/components/components-page/components-page.pug
@@ -76,4 +76,24 @@
 
 
 include ../header/header.pug
+br
+
+
++input-text("Email")
++room-information("mood", "Комфорт", "Шумопоглощающие стены", " information__border") 
++room-information("location_city", "Удобство", "Окно в каждой из спален", " information__border")
++checkbox('Smoking', 'Можно курить', "room__checkbox")
++checkbox('Pets', 'Можно с питомцами', "room__checkbox")
++checkbox('Guests',  "Можно пригласить гостей (до 10 человек)",
+"room__checkbox")
+br
+br
++bullet-list("Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00" + ", "   +  " а выезд до 12:00 ")
+br
+include ../../blocks/dropdown/dropdown.pug
++feedback(require("./images/photo1.jpg"), "Мурад Сарафанов", '5 дней назад', "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.")
+include ../../blocks/airdatepicker/airdatepicker.pug
+include ../signin-form/signin-form.pug
+include ../../blocks/donutChart/donutChart.pug
++card-room("carousel", require("./images/room1.jpg"), require("./images/room1.jpg"), require("./images/room1.jpg"), require("./images/room1.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
 include ../footer/footer.pug
