--- a/src/components/main_ui/main_ui.scss
+++ b/src/components/main_ui/main_ui.scss
@@ -28,9 +28,8 @@
   }
 
   + .tgl-btn {
-    width: 40px;
-    height: 20px;
-    margin-left: 30px;
+    width: 56px;
+    height: 28px;
     background: #ffffff;
     /* Primary Color */
     border: 1px solid rgba(31, 32, 65, 0.25);
@@ -46,9 +45,10 @@
       position: relative;
       display: block;
       content: "";
-      width: 12px;
-      height: 12px;
-      top: 1px;
+      width: 16px;
+      height: 16px;
+      top: 3px;
+      left: 3px;
     }
 
     &:after {
