--- a/src/index.pug
+++ b/src/index.pug
@@ -10,7 +10,7 @@ html(lang="en")
         .wrapper    
             //- include components/main_ui/main_ui.pug
             //- include components/header/header.pug
-            include components/footer/footer.pug
+            //- include components/footer/footer.pug
             //- include components/landing_page/landing_page.pug
             //- include components/signin-page/signin-page.pug
             //- include components/search-page/search-page.pug
@@ -28,3 +28,4 @@ html(lang="en")
             //- include blocks/panagination/panagination.pug
             //- include blocks/slick/slick_blocks/slick.pug
             //- include components/filter-page/filter-page.pug
+            include components/form-register/form-register.pug
