--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -167,10 +167,9 @@ a {
         display: block;
         position: absolute;
         border-radius: 100%;
-        height: 22px;
-        width: 22px;
+        height: 25px;
+        width: 25px;
         top: 30px;
-        left: 20px;
         z-index: 5;
         transition: border 0.25s linear;
         -webkit-transition: border 0.25s linear;
@@ -182,7 +181,7 @@ a {
           border-radius: 100%;
           height: 14px;
           width: 14px;
-          top: 4px;
+          top: 4.5px;
           left: 4px;
           margin: auto;
           transition: background 0.25s linear;
@@ -194,19 +193,18 @@ a {
         visibility: hidden;
       }
       & label {
-        font-family: "Open Sans";
         display: block;
         position: relative;
-        font-size: 20px;
+        font-size: 24px;
         line-height: 24px;
-        padding: 18px 10px 25px 50px;
+        padding: 21px 10px 25px 30px;
         margin: 10px auto;
         height: 30px;
         z-index: 9;
         cursor: pointer;
         -webkit-transition: all 0.25s linear;
         font-weight: normal;
-        font-size: 14px;
+        font-size: 18px;
         line-height: 24px;
       }
     }
@@ -222,11 +220,11 @@ a {
 }
 
 .radio-button input[type="radio"]:checked ~ .check {
-  border: 1px solid #8ba4f9;
+  border: 1px solid #bc9cff;
 }
 
 .radio-button input[type="radio"]:checked ~ .check::before {
-  background: #8ba4f9;
+  background: #bc9cff;
 }
 
 .radio-button input[type="radio"]:checked ~ label {
