add calculator component

--- a/src/blocks/dropdown/dropdown.pug
+++ b/src/blocks/dropdown/dropdown.pug
@@ -20,6 +20,6 @@ label.dropdowns
          button(class="plus button" id="baby_plus") +
          p(class="text" id="baby_text") 0
          button(class="minus button" id="baby_minus") -
-    li( )
+    .flex-row
          button(class="clean" id="clean") Очистить
          button(class="apply" id="apply") Применить
