--- a/src/components/landing_page/landing_page.pug
+++ b/src/components/landing_page/landing_page.pug
@@ -6,7 +6,7 @@ html
     include ../header/header.pug
     .clear
 
-    .main-background
+    .sugnup__background
       include ../form-register/form-register.pug
     include ../footer/footer.pug
 
