--- a/src/components/search-page/search-page.scss
+++ b/src/components/search-page/search-page.scss
@@ -1,5 +1,5 @@
 .main-background-search{
-    min-height: 800px;
+    height: 1300px;
     background-image: url(../images/image.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -12,7 +12,7 @@
 
 .slogan{
     position: relative;
-    bottom: 1%;
+    font-size: 20px;
     left: 70%;
-    margin-top: 200px;
+    margin-top: 600px;
 }
