--- a/src/components/signin-form/signin-form.pug
+++ b/src/components/signin-form/signin-form.pug
@@ -2,7 +2,7 @@
   .wrap
     .container__form
         h1(
-          class="title title__main"
+          class="title__main"
         ) Войти
 
         input(class="input_text input__signin" placeholder="Email")
