--- a/src/blocks/airdatepicker/airdatepicker.scss
+++ b/src/blocks/airdatepicker/airdatepicker.scss
@@ -10,7 +10,7 @@
     margin-bottom: 30px;
     outline: none;
     border: none;
-    border: 1px solid black;
+    border: 1px solid rgba(31, 32, 65, 0.25);
     &::placeholder {
         font-style: normal;
         font-weight: normal;
