--- a/src/blocks/calculator/calculator.scss
+++ b/src/blocks/calculator/calculator.scss
@@ -1,9 +1,21 @@
 .calculator {
-  width: 400px;
-  height: 511px;
+  width: 490px;
+  height: 700px;
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.12);
   box-sizing: border-box;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+
+.calculator__container{
+  margin: 30px;
+}
+
+.calculator__container p {
+  font-size: 20px;
+}
+.calculator__total{
+  font-size: 20px;
+  font-weight: bold;
 }
