--- a/src/blocks/dropdown/dropdown.scss
+++ b/src/blocks/dropdown/dropdown.scss
@@ -1,131 +1,129 @@
-
 .dropdowns {
-    display: inline-block;
-    position: relative;
-  }
-  
-  .dropdowns .dd-button {
-    display: inline-block;
-    border: 1px solid rgba(31, 32, 65, 0.25);
-    border-radius: 4px;
-    width: 410px;
-    height: 60px;
-    margin-left: 10px;
-    margin-top: 5px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 18px;
-    color: $color-standart;
-    margin-bottom: 35px;
-  }
-  
-  .dropdowns .dd-button:after {
-    content: "";
-    padding: 5px;
-    //   //set tickness
-    box-shadow: 2px -2px 0 0 $black-text inset;
-    display: inline-block;
-    transform: rotate(-45deg);
-    margin-left: 55%;
-    margin-top: 20px;
-    color: $black-text;
-  }
-  
-  .dropdowns .dd-button:hover {
-    background-color: #eeeeee;
-  }
-  
-  
-  .dropdowns .dd-input {
-    display: none;
-  }
-  
-  .dropdowns .dd-menu {
-    position: absolute;
-    top: 100%;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 0;
-    margin: 2px 0 0 0;
-    box-shadow: 0 0 6px 0 rgba(0,0,0,0.1);
-    background-color: #ffffff;
-    list-style-type: none;
-    margin-left: 15px;
-  }
-  
-  .dropdowns .dd-input + .dd-menu {
-    display: none;
-  } 
-  
-  .dropdowns .dd-input:checked + .dd-menu {
-    display: block;
-  } 
-  
-  .dropdowns  .dd-menu li {
-    padding: 10px 20px;
-    cursor: pointer;
-    white-space: nowrap;
-    width: 380px;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .dropdowns .dd-menu li:hover {
-    background-color: #f6f6f6;
-  }
-  
-  .dropdowns .button{
-    width: 30px;
+  display: inline-block;
+  position: relative;
+}
+
+.dropdowns .dd-button {
+  display: inline-block;
+  border: 1px solid rgba(31, 32, 65, 0.25);
+  border-radius: 4px;
+  width: 425px;
+  height: 60px;
+  margin-left: 10px;
+  margin-top: 5px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 18px;
+  color: $color-standart;
+  margin-bottom:35px;
+  padding-left: 10px;
+}
+
+.dropdowns .dd-button:after {
+  content: "";
+  padding: 5px;
+  //   //set tickness
+  box-shadow: 2px -2px 0 0 $black-text inset;
+  display: inline-block;
+  transform: rotate(-45deg);
+  margin-left: 55%;
+  margin-top: 25px;
+  color: $black-text;
+}
+
+.dropdowns .dd-input {
+  display: none;
+}
+
+.dropdowns .dd-menu {
+  position: absolute;
+  top: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 0;
+  margin: 2px 0 0 0;
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+  list-style-type: none;
+  margin-left: 13px;
+  margin-top: -30px;
+}
+
+.dropdowns .dd-input + .dd-menu {
+  display: none;
+}
+
+.dropdowns .dd-input:checked + .dd-menu {
+  display: block;
+}
+
+.dropdowns .dd-menu li {
+  padding: 10px 20px;
+  cursor: pointer;
+  white-space: nowrap;
+  width: 420px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.dropdowns .dd-menu li:hover {
+  background-color: #f6f6f6;
+}
+
+.dropdowns .button {
+  width: 30px;
   height: 30px;
-  
+
   border: 1px solid rgba(31, 32, 65, 0.25);
   box-sizing: border-box;
   border-radius: 22px;
-  }
-  
-  .dropdowns .title{
-    font-family: 'Montserrat';
+}
+
+.dropdowns .title {
+  font-family: "Montserrat";
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
   line-height: 15px;
+  
   /* identical to box height */
-  
+  margin-top: 20px;
   text-transform: uppercase;
-  vertical-align: middle;
-  color: #1F2041;
-  }
-  
-  .dropdowns   .flex{
-    display: flex;
-  }
-  
-  .dropdowns  .text{
-    margin: 7px 30px 0 30px;
-  }
+  color: #1f2041;
+}
 
-  .clean{
-    font-family: "Montserrat";
-    font-style: normal;
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 15px;
-    text-transform: uppercase;
-    color: rgba(31, 32, 65, 0.5);
-    border: none;
-    background: transparent;
-     outline: none;
-  }
+.dropdowns .flex {
+  display: flex;
+}
 
-  .apply{
-    font-style: normal;
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 15px;
-    text-transform: uppercase;
-    color: #BC9CFF;
-    border: none;
-    background: transparent;
-    outline: none;
-  }
+.dropdowns .text {
+  margin: 7px 30px 0 30px;
+}
+
+.clean {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 15px;
+  text-transform: uppercase;
+  color: rgba(31, 32, 65, 0.5);
+  border: none;
+  background: transparent;
+  outline: none;
+  margin: 10px 0 10px 15px;
+}
+
+.apply {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 15px;
+  text-transform: uppercase;
+  color: #bc9cff;
+  border: none;
+  background: transparent;
+  outline: none;
+  margin: 10px 15px 10px 0;
+}
