--- a/src/blocks/littleDropdown/littleDropdown.scss
+++ b/src/blocks/littleDropdown/littleDropdown.scss
@@ -8,8 +8,8 @@
     display: inline-block;
     border: 1px solid rgba(31, 32, 65, 0.25);
     border-radius: 4px;
-    width: 340px;
-    height: 42px;
+    width: 390px;
+    height: 60px;
     margin-top: 5px;
     font-style: normal;
     font-weight: normal;
@@ -28,15 +28,10 @@
     box-shadow: 2px -2px 0 0 $black-text inset;
     display: inline-block;
     transform: rotate(-45deg);
-    margin-left: 45%;
+    margin-left: 55%;
     margin-top: 20px;
     color: $black-text;
   }
-  
-  .little-dropdowns .dd-button:hover {
-    background-color: #eeeeee;
-  }
-  
   
   .little-dropdowns .dd-input {
     display: none;
@@ -67,7 +62,7 @@
     padding: 10px 20px;
     cursor: pointer;
     white-space: nowrap;
-    width: 315px;
+    width: 385px;
     display: flex;
     justify-content: space-between;
   }
@@ -78,7 +73,7 @@
   
   .little-dropdowns .button{
     width: 30px;
-  height: 30px;
+    height: 30px;
   
   border: 1px solid rgba(31, 32, 65, 0.25);
   box-sizing: border-box;
@@ -86,7 +81,8 @@
   }
   
   .little-dropdowns .title{
-    font-family: 'Montserrat';
+  margin-top: 15px;
+  font-family: 'Montserrat';
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
