--- a/src/components/info-room/info-room.pug
+++ b/src/components/info-room/info-room.pug
@@ -3,10 +3,7 @@ include ../mixins.pug
 div(class="information")
     div(class="information_top-part")
         div(class="backgound__first")
-            img(src=require("./images/mainA.jpg") class="bigImg")
-        div(class="backgound__second")
-            img(src=require("./images/mainB.jpg") class="mainB")
-            img(src=require("./images/mainC.jpg") class="mainC")
+            //- img(src=require("./images/mainA.jpg") class="bigImg")
     div(class="information_bottom-part row" class="container")
         div(class="bottom-part__left")
 
