--- a/src/components/landing_page/landing_page.scss
+++ b/src/components/landing_page/landing_page.scss
@@ -3,9 +3,18 @@
     background-image: url(../images/bg_in.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 30px 0;
+    padding-top: 220px;
+    width: 100%;
 }
 
+.sugnup__background{
+    min-height: 930px;
+    background-image: url(../images/bg_in.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    padding: 30px;
+}
 .clear{
     clear: both;
 }
